fix links , pre and align-left: remove

--- a/projects/ng-components/src/components/contacts/contacts.component.scss
+++ b/projects/ng-components/src/components/contacts/contacts.component.scss
@@ -12,7 +12,6 @@
       gap: 20px;
 
       &__section {
-        text-align: center;
         color: #25122d;
         font-family: var(--font-family);
         &__header {
@@ -23,9 +22,15 @@
           font-size: 20px;
           line-height: 34px;
           margin: 0;
+
+          a {
+            text-decoration: none;
+            color: initial;
+          }
         }
         &__address {
           white-space: pre-wrap;
+          font-size: 20px;
           line-height: 26px;
         }
       }
@@ -36,9 +41,6 @@
     .contacts-container {
       &__contacts {
         grid-template-columns: 1fr 1fr;
-        &__section {
-          text-align: left;
-        }
       }
     }
   }
